--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en"></pt-br>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>podepa</title>
+    <link rel="stylesheet"href="styles.css"/>
+    <title>aluraflix</title>
 </head>
-<body>
-  <reder  rep 
- ></h1> ATRVES DO ARANHAVERSO SUPER O PRIMERO FILME?</h1
- p></h1> homen-aranha></p>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/MntujrIW5VE?si=ig6RPFQ9lGdJdO2T" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</body>
-</html>
+<body>    
+
+    <header>aluraflix</header>
+   
+
+    <section>
+       <div>
+             <h1>ATRAVES DO ARANHAVERSO SUPERA O PRIMERO FILME?</h1>
+            <p>#homen homen-aranha</p>
+
+       </div>
+
+      <div>
+
+
+      </div>
+       <iframe width="560"height="315"src=
+
+
+
+    </section>
